# bitcoin-block-builder

./: EXERCISE.md  README.md  output_example.txt  run.sh
implementation/: Cargo.toml
implementation/src/: main.rs  utils_main.rs
implementation/src/mining/: assign_parents.rs  construct_coinbase.rs  header.rs  mod.rs  packet_weight.rs  transaction_sorting.rs
implementation/src/parsing/: mod.rs  transaction_structs.rs
implementation/src/validation/: mod.rs  script.rs  signature_verification.rs  utils.rs  validate_parsing.rs  validate_values.rs  weight_calculation.rs
implementation/test_scripts/: test_tx_assembly.py  validate_wtxids.py
